[package]
name = "redis-session-manager"
version = "0.1.0"
edition = "2021"
description = "Redis module for session management using custom hashmap"

[lib]
crate-type = ["cdylib"]

[dependencies]
redis-module = { version = "2.0.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
uuid = { version = "1.3", features = ["v4"] }
